small dashboard update

--- a/dashboard.ipynb
+++ b/dashboard.ipynb
@@ -79,6 +79,9 @@
     "#keyword for news research\n",
     "keyword = \"bitcoin\"\n",
     "\n",
+    "#take it from glassnode\n",
+    "glassnode_skey = 'SECRET KEY HERE'\n",
+    "\n",
     "# Range used to download datas. \n",
     "start = dt.date(2016, 10, 1)\n",
     "\n",
@@ -234,8 +237,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "skey = 'SECRET KEY HERE'\n",
-    "\n",
     "onchain = OnChain(skey)\n",
     "onchain.download_datasets()"
    ]
