dashboard hot fix: secret key variable

--- a/dashboard.ipynb
+++ b/dashboard.ipynb
@@ -80,13 +80,13 @@
     "keyword = \"bitcoin\"\n",
     "\n",
     "#take it from glassnode\n",
-    "glassnode_skey = 'SECRET KEY HERE'\n",
+    "glassnode_skey = 'INSERT SECRET KEY HERE'\n",
     "\n",
     "# Range used to download datas. \n",
     "start = dt.date(2016, 10, 1)\n",
     "\n",
     "# Range used to plot the chart. Support & resistance are identified by this range \n",
-    "start_date_plot = dt.date(2020, 10, 1)\n",
+    "start_date_plot = dt.date(2021, 10, 1)\n",
     "\n",
     "end = dt.date.today()\n",
     "end_date_plot = dt.date.today()"
@@ -237,7 +237,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "onchain = OnChain(skey)\n",
+    "onchain = OnChain(glassnode_skey)\n",
     "onchain.download_datasets()"
    ]
   },
