price profile integration

--- a/dashboard.ipynb
+++ b/dashboard.ipynb
@@ -82,10 +82,10 @@
     "#take it from glassnode\n",
     "glassnode_skey = 'INSERT SECRET KEY HERE'\n",
     "\n",
-    "# Range used to download datas. \n",
+    "# Range used to download datas. Support & resistance are identified by this range\n",
     "start = dt.date(2016, 10, 1)\n",
     "\n",
-    "# Range used to plot the chart. Support & resistance are identified by this range \n",
+    "# Range used to plot the technical analysis chart.  \n",
     "start_date_plot = dt.date(2021, 10, 1)\n",
     "\n",
     "end = dt.date.today()\n",
