--- a/dashboard.ipynb
+++ b/dashboard.ipynb
@@ -82,11 +82,11 @@
     "#take it from glassnode\n",
     "glassnode_skey = 'INSERT SECRET KEY HERE'\n",
     "\n",
-    "# Range used to download datas. Support & resistance are identified by this range\n",
-    "start = dt.date(2016, 10, 1)\n",
+    "# Range used to download datas. \n",
+    "start = dt.date(2016, 1, 1)\n",
     "\n",
-    "# Range used to plot the technical analysis chart.  \n",
-    "start_date_plot = dt.date(2021, 10, 1)\n",
+    "# Range used to plot the technical analysis chart. Support & resistance are identified by this range\n",
+    "start_date_plot = dt.date(2021, 1, 1)\n",
     "\n",
     "end = dt.date.today()\n",
     "end_date_plot = dt.date.today()"
@@ -107,12 +107,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ta = taAnalysis(\"BTC-USD\", start_date = start, start_plot_date = start_date_plot)\n",
+    "ta = taAnalysis(asset, start_date = start, start_plot_date = start_date_plot)\n",
     "ta.download_data()\n",
     "ta.set_levels()\n",
     "btc_usd_df = ta.get_data()\n",
-    "fig = ta.plot_all()\n",
-    "fig.show()"
+    "ta.plot_all()"
    ]
   },
   {
